syntax = "proto3";
package realionetwork.asset.v1;

option go_package = "github.com/realiotech/realio-network/x/asset/priviledges/transfer_auth";

import "cosmos_proto/cosmos.proto";

enum ActionType {
    ACTION_TYPE_UNSPECIFIED = 0;
    // ACTION_TYPE_ADD defines the type for adding addresses.
    ACTION_TYPE_ADD= 1;
    // ACTION_TYPE_REMOVE defines the type for remove addresses.
    ACTION_TYPE_REMOVE= 2;
  }
  

message MsgUpdateAllowList {
   repeated string addresses = 1 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
    string token_id = 2;
    ActionType action_type = 3;
}
